--- a/src/index.css
+++ b/src/index.css
@@ -41,3 +41,14 @@
 p {
     font-family: "Roboto", sans-serif;
 }
+
+.newJob label {
+    @apply font-medium text-blue-800
+}
+.newJob input {
+    @apply border-[1px] border-blue-800
+}
+
+select option {
+    @apply text-orange-800
+}
