--- a/src/index.css
+++ b/src/index.css
@@ -36,7 +36,7 @@
 }
 
 .sub-title {
-    @apply md:text-xl text-lg
+    @apply md:text-xl text-lg font-semibold
 }
 p {
     font-family: "Roboto", sans-serif;
